@@ -44,7 +44,7 @@ public class GroovyScriptEngine implements ScriptEngine {
 
   ////// inner classes
 
-  class BlockingInput {
+  static class BlockingInput {
 
     private int waiting = 0;
     private String input = null;
@@ -78,13 +78,13 @@ public class GroovyScriptEngine implements ScriptEngine {
   ////// private attributes
 
   private GroovyShell groovy;
-  private Binding binding;
+  private final Binding binding;
   private ImportCustomizer imports;
   private Shell out = null;
   private Thread busy = null;
-  private Documentation doc = new Documentation();
-  private BlockingInput input = new BlockingInput();
-  private Logger log = Logger.getLogger(getClass().getName());
+  private final Documentation doc = new Documentation();
+  private final BlockingInput input = new BlockingInput();
+  private final Logger log = Logger.getLogger(getClass().getName());
 
   ////// constructor
 
@@ -135,7 +135,7 @@ public class GroovyScriptEngine implements ScriptEngine {
 
   @Override
   public boolean isComplete(String cmd) {
-    if (cmd == null || cmd.trim().length() == 0) return true;
+    if (cmd == null || cmd.trim().isEmpty()) return true;
     try {
       groovy.parse(cmd);
       return true;
@@ -143,8 +143,7 @@ public class GroovyScriptEngine implements ScriptEngine {
       String s = ex.getMessage();
       if (s == null) return true;
       if (s.contains("unexpected token")) return false;
-      if (s.contains("expecting")) return false;
-      return true;
+      return !s.contains("expecting");
     } catch (Throwable ex) {
       return true;
     }
@@ -262,7 +261,7 @@ public class GroovyScriptEngine implements ScriptEngine {
           binding.setVariable("out", out);
           binding.setVariable("script", script.getName());
           binding.setVariable("args", args);
-          Script gs = (Script)script.newInstance();
+          Script gs = (Script)script.getDeclaredConstructor().newInstance();
           gs.setBinding(binding);
           gs.run();
         } catch (Throwable ex) {
